<resources>
    <string name="app_name">Puckman</string>
    <!-- For main activity -->
    <string name="start">New Game</string>
    <string name="options">Options</string>
    <string name="about">About?</string>
    <string name="exit">Exit</string>
    <!-- For about activity -->
    <string name="aboutText">Здесь также пусто\nкак и у автора\nв душе..</string>
    <string name="aboutButText">Но ты можешь\nжмякнуть на кнопку</string>
    <string name="aboutButton">Жмякни</string>
    <!-- For Options -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_music_switch">Music</string>
    <string name="pref_music_description">Music in Game
    </string>
    <string name="pref_g_sensor_switch">G-Sensor</string>
    <string name="pref_g_sensor_description">Use G-Sensor for control the player
    </string>
    <string name="pref_title_display_name">Nickname</string>
    <string name="pref_default_display_name">Puckman</string>
    <string name="pref_description_display_name">I dont know why, just write. No question</string>
    <string name="pref_title_orientation">Orientation</string>
    <string name="pref_description_orient">Choose game orientation</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
</resources>
