<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="music_switch"
        android:summary="@string/pref_music_description"
        android:title="@string/pref_music_switch" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="g_sensor_switch"
        android:summary="@string/pref_g_sensor_description"
        android:title="@string/pref_g_sensor_switch" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="player_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_description_display_name"
        android:title="@string/pref_title_display_name" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/list_orient"
        android:entryValues="@array/list_orient_values"
        android:key="orient_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_orient"
        android:title="@string/pref_title_orientation" />

</PreferenceScreen>
