<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@drawable/main"
    tools:context="com.puckman.ololo.puckman.MainActivity"
    android:weightSum="1">

    <ImageView
        android:background="@drawable/main_logo"
        android:layout_marginTop="-30dp"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_weight="0.76"
        tools:ignore="ContentDescription,InefficientWeight" />

    <Button
        style="@style/MainActivityButtons"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:onClick="newGame"
        android:text="@string/start"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        style="@style/MainActivityButtons"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/options"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="180dp"
        android:onClick="options"/>

    <Button
        style="@style/MainActivityButtons"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/about"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="248dp"
        android:onClick="about"/>

    <Button
        style="@style/MainActivityButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="304dp"
        android:onClick="exit"/>

</LinearLayout>
