<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.puckman.ololo.puckman.AboutActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/aboutText"
        android:textSize="@dimen/aboutText"
        android:textStyle="bold"
        android:textColor="@color/colorOpt"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/aboutButText"
        android:textColor="@color/colorOpt"
        android:textSize="@dimen/aboutButText"
        android:textStyle="bold" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/aboutButton"
        android:textColor="@color/colorYellow" />
</LinearLayout>
